# experiments

./: .gitignore  README.md  reservoir_sampling.py
amp-pets-story/: chatg.html
ang-route/: .angular-cli.json  README.md  package-lock.json  package.json
ang-route/e2e/: app.e2e-spec.ts
ang-route/src/: index.html
borderify/: README.md  borderify.js
django_app/: .gitignore  README.md  install.sh  manage.py  requirements.txt
django_app/hf/: admin.py  log_midware.py  models.py  tagger.py  tests.py  urls.py  views.py
django_app/hfb/: apps.py  models.py  urls.py  views.py
django_app/hifi_api/: celery.py  settings.py  urls.py  wsgi.py
django_app/other/: apache.conf  ejab.sh  mod_http_offline.erl  to do.txt
django_app/pokemongo/: admin.py  models.py  pokestop.py  save_pokestops.py  tests.py  urls.py  views.py
django_app/utils/: ChatHelper.py  admin.py  (+12 more)
graph_ql/: README.md  grph.py
image_similarity/: .gitignore  README.md  classify_image.py
jwt-exp/: .angular-cli.json  README.md  package-lock.json  package.json
mongo_ex/: README.md  async_motor.py  test_mongo_query_speed.py
my-app/: README.md  package-lock.json
other/: reservoir_sampling.py
polymer_ex/: README.md
quickstart/: credentials.json  go.mod
rust/web_rust/api_server/: Cargo.toml  Dockerfile
rxjsexp/: README.md  index.html  index.js  package-lock.json  package.json  style.css
socket_pyth/: client.py  server.py
sort-ui/: README.md  index.html  index.js  package-lock.json  package.json
tornado_python/: README.md
turbo_project/: README.md  package-lock.json  package.json
(+125 files in other folders)
