[package]
name = "api_server"
version = "0.1.0"
authors = ["Yale Cason <yale.cason@gmail.com>"]

[dependencies]
#ring="*"
rocket = "*"
rocket_codegen = "*"
rocket_contrib = "*"
diesel = { version = "*", features = ["postgres"] }
diesel_codegen = { version = "*", features = ["postgres"] }
dotenv = "*"
r2d2 = "*"
r2d2-diesel = "*"
lazy_static = "*"
serde = "*"
serde_derive = "*"